# color_harmony

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-quality-badges.yml
assets/: readme.md
docs/: GithubActions.md  design.md  gradio-ui.md  readme.md
scripts/: update_quality_badges.py
src/: app.py  app_config.py  bucket_details.py  build_histogram.py  compute_hue_statistics.py  gradio_app.py  hue_label.py  load_image.py  readme.md  refresh_histogram.py  reset_app.py  update_bucket_weights.py
src/color_harmony/: __init__.py  __main__.py  app.py
tests/: conftest.py  readme.md  test_color_harmony.py  test_update_quality_badges.py
